--- a/javascript/gameOfLife.html
+++ b/javascript/gameOfLife.html
@@ -66,7 +66,7 @@
                                 continue;
                             }
 
-                            if (yScan < 0 || yScan >= width) {
+                            if (yScan < 0 || yScan >= height) {
                                 continue;
                             }
 
